# multi-agent-orchestrator

./: README.md  pyproject.toml
examples/: research_demo.py
orchestrator/: __init__.py  agent.py  core.py  llm.py  tools.py  trace.py
orchestrator/agents/: __init__.py  critic.py  planner.py  researcher.py  writer.py
tests/: test_handoffs.py
